--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "ng-apexcharts": "^1.5.6",
     "ng-bootstrap-form-validation": "^9.0.0",
     "ng-multiselect-dropdown": "^0.2.14",
+    "ng-snotify": "^9.0.1",
     "ng2-archwizard": "^2.1.0",
     "ng2-charts": "^2.4.2",
     "ng2-nouislider": "^1.8.2",
